...
                                <rect key="frame" x="0.0" y="458" width="414" height="56"/>
                                <color key="backgroundColor" white="1" alpha="0.51685573630136983" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="deleteBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="duF-Vl-1Oo"/>
...
                                                    <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zva-Dl-l4S">
                                                        <rect key="frame" x="130" y="8.6666666666666856" width="254" height="39"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="tf3"/>
                                                        <color key="textColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                    <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FdV-eK-Oom">
                                                        <rect key="frame" x="130" y="8.6666666666666856" width="254" height="39"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="tf4"/>
                                                        <color key="textColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rum-vN-YZf">
                                                        <rect key="frame" x="130" y="8.6666666666666856" width="254" height="39"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="tf1"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="39" id="1kR-Fq-gg6"/>
...
                                                    <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HFs-MW-CfC">
                                                        <rect key="frame" x="130" y="8.6666666666666856" width="254" height="39"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="tf2"/>
                                                        <color key="textColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
